--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.1",
+    "bootstrap": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
     "vite": "^4.0.4"
   },
   "devDependencies": {
