--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^2.2.0",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
